--- a/ios/Podfile
+++ b/ios/Podfile
@@ -31,6 +31,8 @@ target 'FschoolGV' do
   pod 'react-native-google-maps', :path => rn_maps_path
   pod 'GoogleMaps'
   pod 'Google-Maps-iOS-Utils'
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'FschoolGVTests' do
     inherit! :search_paths
     # Pods for testing
