--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.0.0-beta.13",
     "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-video": "^4.4.4",
     "react-native-viewpager": "^0.2.13",
     "react-native-webview": "^8.1.1",
