--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/image-editor": "^2.1.0",
+    "firebase": "^7.12.0",
     "is-url": "^1.2.4",
     "jetifier": "^1.6.3",
     "moment": "^2.24.0",
@@ -19,11 +20,12 @@
     "react": "16.8.6",
     "react-native": "0.60.5",
     "react-native-24h-timepicker": "^1.1.0",
-    "react-native-camera": "^3.8.0",
+    "react-native-camera": "^3.21.0",
     "react-native-code-push": "^5.6.0",
     "react-native-dash": "0.0.9",
     "react-native-datepicker": "^1.7.2",
     "react-native-fbsdk": "git+https://github.com/facebook/react-native-fbsdk.git",
+    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.16.1",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-google-signin": "^2.1.0",
